# ecom_analyst

./: .gitignore
ecomm_analyst/: .gitattributes  .gitignore  DEPLOY_CLOUDFLARE.md  README.md  RUNNING.md  build-cloudflare-worker.sh  deploy-cloudflare-worker.sh
ecomm_analyst/.cursor/rules/: push-after-fix.mdc
ecomm_analyst/.github/workflows/: cloudflare-pages.yml
ecomm_analyst/backend/: .dockerignore  .env.example  Dockerfile  ecommerce.db  fly.toml
ecomm_analyst/backend/app/: config.py  main.py  security.py
ecomm_analyst/backend/app/routers/: dashboard.py  insights.py  sales.py
ecomm_analyst/backend/data_200/: sales.csv  sales_snake.csv
ecomm_analyst/cloudflare-worker/: .dev.vars.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
ecomm_analyst/cloudflare-worker/scripts/: prepare-worker-sqlite.mjs  rehash-demo-password-sqljs.mjs  rehash_demo_password_pyodide.py  sync-backend-vendor.sh  sync-ecommerce-db.sh  sync-r2-images.sh
ecomm_analyst/cloudflare-worker/src/: gateway.js  worker.py
ecomm_analyst/frontend/: .env.local.example  .env.production.example  deploy-urls.js  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo  wrangler.toml
ecomm_analyst/frontend/public/: .assetsignore  _headers
ecomm_analyst/frontend/src/: react-simple-maps.d.ts
ecomm_analyst/frontend/src/app/: globals.css
ecomm_analyst/frontend/src/components/: BundleNetworkGraph.tsx  KpiCard.tsx  LiftMatrix.tsx  MarketplaceLogo.tsx  Sidebar.tsx
ecomm_analyst/scripts/: jpeg_to_webp.py
(+14 files in other folders)
