[project]
name = "ecom-analyst-worker"
version = "0.1.0"
description = "Cloudflare Python Worker: R2 images + proxy to Fly API (slim bundle)"
readme = "README.md"
requires-python = ">=3.12"
# Intentionally empty: FastAPI/Pydantic/SQLAlchemy exceed Workers Free gzip (~3 MiB).
# API runs on Fly; this Worker only serves /images from R2 and proxies everything else.
dependencies = []

[dependency-groups]
dev = [
  "workers-py",
  "workers-runtime-sdk",
  "pywrangler",
]
